# COMPLIANCE-IQ

./: .dockerignore  .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ASSUMPTIONS.md  COMPLIANCE_NOTES.md
docs/ADR/: 0000-record-architecture-decisions.md  0001-clean-architecture-and-enforcement.md  0002-postgres-pgvector-single-store.md
documentation/AI/: ComplianceIQ_6Week_Execution_Roadmap.md  ComplianceIQ_AI_Service_Architecture_Course.md  FastAPI_Zero_to_Hero_ComplianceIQ.md  FastAPI_Zero_to_Hero_ComplianceIQ_Part2.md
src/complianceiq/: __init__.py  __main__.py  asgi.py  composition.py
src/complianceiq/application/: __init__.py  app_info.py
src/complianceiq/application/services/: __init__.py  health.py
src/complianceiq/domain/: __init__.py  _base.py  exceptions.py
src/complianceiq/domain/entities/: __init__.py  auth.py  financial.py  finding.py  pagination.py  remediation.py  resource.py  risk.py  score.py
src/complianceiq/domain/policies/: __init__.py  tenant_isolation.py
src/complianceiq/domain/ports/: __init__.py  clock.py  health.py
src/complianceiq/domain/value_objects/: __init__.py  citation.py  enums.py  identifiers.py
src/complianceiq/infrastructure/: __init__.py  clock.py
src/complianceiq/infrastructure/config/: __init__.py  settings.py
src/complianceiq/infrastructure/http/: __init__.py  middleware.py
src/complianceiq/infrastructure/logging/: __init__.py  context.py  setup.py
src/complianceiq/presentation/: __init__.py  app.py  container.py  errors.py  schemas.py
src/complianceiq/presentation/routers/: __init__.py  health.py
tests/: conftest.py  factories.py
tests/unit/domain/: test_auth_and_pagination.py  test_entities.py  test_financial.py  test_remediation.py  test_tenant_isolation.py
tests/unit/infrastructure/: test_clock.py  test_health_service.py  test_middleware.py  test_settings.py
tests/unit/presentation/: test_errors.py  test_health_api.py  test_readiness_unhealthy.py
